# Difference-calculator

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml  tests.yml
gendiff/: __init__.py  argparser.py  difference.py  formats.py  generate_diff.py  make_str.py  parse_file.py  read_file.py
gendiff/formatting/: make_json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_generate_diff.py  test_json_dumps.py  test_plain_json.py  test_plain_yml.py  test_stylish.py  test_stylish_json.py  test_stylish_yml.py
tests/fixtures/: file1.json  file1.yml  file2.json  file2.yml  json_1_2.json  result_json  result_stylish  stylish.txt  stylish_3_4.txt
